# fish-and-chips-and-kafka-talk

./: .gitignore  Makefile  README.md  README.rst  light16x9.yaml  notes.rst  pre-submission-notes.rst  pyproject.toml  sketch.rst  slides.rst  unused-slides.rst
images/: Fish-All-with-Cook.graffle  Fish-Till-Preparer-Others.graffle  Fish-Till-Preparer.graffle  demo1-till-preparer.graffle  demo2-3tills.graffle  demo3-2preparers.graffle  demo3-3preparers.graffle  demo4-cook.graffle  homework-kafka-connect.graffle  homework-kafka-magic.graffle  homework-redis-1.graffle  homework-redis-2.graffle  homework-redis-3.graffle  kafka1-overview.graffle  kafka2-overview.graffle  kafka3-overview.graffle  kafka4-overview.graffle  unused-many-consumers.graffle
src/: LICENSE.txt  demo1-cod-and-chips.py  demo2-cod-and-chips-3tills.py  demo3-cod-and-chips-3tills-2preparers.py  demo4-with-added-cook.py  demo5-with-added-cook.py  demo_helpers.py  poc1.py  poc2.py  poc3.py  pyproject.toml  readme.rst  shop.py
