[tool.poetry]
name = "fish-and-chip-demo"
version = "0.1.0"
description = "Demo for \"Fish and Chips and Apache Kafka®\" talk"
authors = ["Tony Ibbs (Tibs) <tony.ibbs@aiven.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
click = "^8.1.3"
textual = "^0.1.18"
aiokafka = "^0.7.2"
aiven-client = "^2.16.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
